[package]
name = "acoustid_api"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["serde"] }
